[package]
name = "rusty_telescope"
version = "0.1.0"
edition = "2021"

[dependencies]
opentelemetry = { version = "0.20", features = ["metrics"] }
opentelemetry-prometheus = "0.13"
prometheus = "0.13"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
async-trait = "0.1"
futures = "0.3"
clap = { version = "4.0", features = ["derive"] }
sysinfo = "=0.32.0"
prometheus_exporter = "0.8.5"
